// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Option component Highlighted 1`] = `
<li
  className="row"
  data-value="hamburger"
  role="menuitem"
>
  <button
    className="option is-highlighted"
    onMouseDown={[Function]}
    tabIndex="-1"
    type="button"
    value="hamburger"
  >
    Hamburger
  </button>
</li>
`;

exports[`Test Option component Renders with default props 1`] = `
<li
  className="row"
  data-value="hamburger"
  role="menuitem"
>
  <button
    className="option"
    onMouseDown={[Function]}
    tabIndex="-1"
    type="button"
    value="hamburger"
  >
    Hamburger
  </button>
</li>
`;

exports[`Test Option component Selected 1`] = `
<li
  className="row"
  data-value="hamburger"
  role="menuitem"
>
  <button
    className="option is-selected"
    onMouseDown={[Function]}
    tabIndex="-1"
    type="button"
    value="hamburger"
  >
    Hamburger
  </button>
</li>
`;
